[project]
name = "something"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "polars>=1.38.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
